<resources>
    <string name="app_name">EnglishCourse</string>
    <string name="test_btn">TEST</string>
    <string name="hello">Hello!</string>
    <string name="quiz_btn">Quiz</string>
    <string name="training_btn">TRAINING</string>
    <string name="library_btn">Library</string>
    <string name="easy_lvl_btn">EASY</string>
    <string name="normal_lvl_btn">NORMAL</string>
    <string name="hard_lvl_btn">HARD</string>
    <string name="expert_lvl_btn">EXPERT</string>
    <string name="difficulty_lvl">LEVEL OF DIFFICULTY</string>
    <string name="text_question">TextView</string>
    <string name="first_answer">Button1</string>
    <string name="second_answer">Button2</string>
    <string name="third_answer">Button3</string>
    <string name="fourth_answer">Button4</string>
    <string name="text_view_1">Your Score</string>
    <string name="summary_txt">TextView</string>
    <string name="change_lng_button">Button</string>
    <string name="pl_eng_btn">Polish -> English</string>
    <string name="eng_pl_btn">English -> Polish</string>
    <string name="add_word_button">Add</string>
    <string name="end_word">TextView</string>
    <string name="edit_button">Button</string>
    <string name="delete_word_button">TODO</string>
    <string name="edit_word_button">TODO</string>
    <string name="loading_message">Loading...</string>
    <string name="submit_button">Submit</string>
    <string name="text_view">Your Score</string>
    <string name="text_view_2">Your Time</string>
</resources>
