<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">

    <TextView
        android:id="@+id/text_question"
        android:layout_width="368dp"
        android:layout_height="118dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:paddingTop="15dp"
        android:text="@string/text_question"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/first_answer"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/first_answer"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/third_answer"
        app:layout_constraintEnd_toStartOf="@+id/second_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_question" />

    <Button
        android:id="@+id/second_answer"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/second_answer"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fourth_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_answer"
        app:layout_constraintTop_toBottomOf="@+id/text_question" />

    <Button
        android:id="@+id/third_answer"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/third_answer"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fourth_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_answer" />

    <Button
        android:id="@+id/fourth_answer"
        android:layout_width="180dp"
        android:layout_height="121dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/fourth_answer"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/third_answer"
        app:layout_constraintTop_toBottomOf="@+id/second_answer" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/text_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/correct_answers_text_view"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/text_question"
        app:layout_constraintEnd_toStartOf="@+id/chronometer"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questions_progress_text_view"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/text_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toEndOf="@+id/chronometer"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>